examples/test/testpolicy7589.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7589
  namespace: namespace86
spec:
  podSelector:
    matchLabels:
      key48: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value24
          key11: value44
          key8: value20
      podSelector:
        matchLabels:
          key14: value4
